# Curso-POO-2026-BianconiClara

./: .gitignore  README.md
Ejercicio1/: README.md
Ejercicio1/Código/: CMakeLists.txt
Ejercicio2/: README.md
Ejercicio2/Código/: Monitorwidget.h  Monitorwidget.ui  ejercicio2_BianconiClara.pro  main.cpp  monitorwidget.cpp  vpsmonitor.cpp  vpsmonitor.h
Ejercicio3/: README.md
Ejercicio4/: README.md
Ejercicio5/: README.md
Ejercicio6/: README.md
ejercici7/ejercicio7/: README.md  api-clima.txt  ejercicio7.pro
ejercici7/ejercicio7/login/backend/: Dockerfile  requirements.txt
ejercici7/ejercicio7/login/db/: init.sql
ejercici7/ejercicio7/src/: appconfig.h  appcontroller.cpp  climawidget.cpp  logger.cpp  mainwindow.cpp  models.h  networkservice.cpp  networkservice.h  pantalla.h
ejercicio4/: README.md
ejercicio7/: README.md
ejercicio7/código/config/: app.ini
ejercicio7/código/login/: README.md  docker-compose.yml
ejercicio7/código/src/: appconfig.cpp  appcontroller.cpp  appcontroller.h  climawidget.cpp  climawidget.h  loginwindow.cpp  mainwindow.cpp  networkservice.cpp
ejercicio7/resources/: resources.qrc
ejercicio7/src/: loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.h
ejercicio7/ui/: login.ui
ejercicio8/: README.md
ejercicio8/codigo/: editor_multilenguaje.pro
ejercicio8/codigo/build_codex/: Makefile  Makefile.Debug  Makefile.Release
ejercicio8/codigo/config/: app.ini
ejercicio8/codigo/resources/: resources.qrc
ejercicio8/codigo/src/: appconfig.cpp  appconfig.h  appcontroller.cpp  appcontroller.h  editorprincipal.cpp  editorprincipal.h  logger.cpp  logger.h  loginscreen.cpp  loginscreen.h  main.cpp  models.h  modobloqueado.cpp  modobloqueado.h  pantalla.cpp  pantalla.h  validadorsintaxis.cpp  validadorsintaxis.h
ejercicio9/: README.md
ejercicio9/codigo/: admindb.cpp  admindb.h  ejercicio09_qt.pro  login.cpp  login.h  login.ui  main.cpp  pintura.cpp  pintura.h  recursos.qrc
ejercicio9/codigo/db/: init.sql
(+13 files in other folders)
